--- a/style.css
+++ b/style.css
@@ -99,4 +99,11 @@ a {
 }
 .mainStatusText {
   text-align: center;
+  color: black;
+  font-size: 50px;
+  text-shadow:
+    -1px -1px 0 white,
+     1px -1px 0 white,
+    -1px  1px 0 white,
+     1px  1px 0 white;
 }
